[gd_scene load_steps=23 format=3 uid="uid://ccp73t4r2n7kf"]

[ext_resource type="Script" path="res://Scenes/Levels/Level.gd" id="1_12eah"]
[ext_resource type="PackedScene" uid="uid://dqbdvl6orfadx" path="res://Scenes/Agents/agent.tscn" id="2_885p4"]
[ext_resource type="Script" path="res://Scenes/Rules/game_manager.gd" id="3_kock0"]
[ext_resource type="PackedScene" uid="uid://bc6k3dwiyonyw" path="res://Scenes/Rules/state_machine.tscn" id="4_oysjt"]
[ext_resource type="PackedScene" uid="uid://btuqhupbnwq6" path="res://Scenes/Rules/check_for_cop_win.tscn" id="5_b0u6u"]
[ext_resource type="Script" path="res://Scenes/Rules/capture_robbers.gd" id="6_3nbrt"]
[ext_resource type="PackedScene" uid="uid://drpi6jihu1vex" path="res://Scenes/Parts/graph.tscn" id="7_vxu8e"]
[ext_resource type="Texture2D" uid="uid://ce3ol8qmayrrw" path="res://Assets/Art/Objects/purple-circle.svg" id="8_ireie"]
[ext_resource type="Texture2D" uid="uid://l1liqrts1juh" path="res://Assets/Art/Objects/black-circle.svg" id="9_dt0wh"]
[ext_resource type="Texture2D" uid="uid://bkp5hfkr0soki" path="res://Assets/Art/Objects/blue-circle.svg" id="10_u71h1"]
[ext_resource type="Texture2D" uid="uid://ohk7f2737t1m" path="res://Assets/Art/Objects/white-circle.svg" id="11_cf01o"]
[ext_resource type="Texture2D" uid="uid://cbnt0evbn2hns" path="res://Assets/Art/Objects/yellow-circle.svg" id="12_pbbx2"]
[ext_resource type="Texture2D" uid="uid://n7oteo166le6" path="res://Assets/Art/Objects/red-circle.svg" id="13_1ijqw"]
[ext_resource type="Texture2D" uid="uid://bseyyrw5auxpv" path="res://Assets/Art/Objects/green-circle.svg" id="14_02gd7"]
[ext_resource type="Texture2D" uid="uid://rnw0n3230ttj" path="res://Assets/Art/Backgrounds/dark_gray.png" id="15_jip8x"]
[ext_resource type="Script" path="res://Scenes/UI/ReloadLevelButton.gd" id="16_hgfn3"]
[ext_resource type="Script" path="res://Scenes/UI/SceneButton.gd" id="17_0h2cj"]
[ext_resource type="PackedScene" uid="uid://drysmthmgro6c" path="res://Autoloads/Pause/PauseButton.tscn" id="18_b3gwf"]
[ext_resource type="Script" path="res://Scenes/UI/NextLevelButton.gd" id="19_dco50"]
[ext_resource type="Script" path="res://Scenes/UI/BeginScreen.gd" id="20_fir45"]

[sub_resource type="GDScript" id="GDScript_c5y8f"]
script/source = "extends Resource


@export_category(\"Skins\")
@export var default_skin : Texture2D
@export var cop_skin : Texture2D
@export var robber_skin : Texture2D
@export var both_skin : Texture2D
@export var burnt_skin : Texture2D
@export var selected_skin : Texture2D
@export var hovering_skin : Texture2D



"

[sub_resource type="Resource" id="Resource_lslub"]
resource_local_to_scene = true
script = SubResource("GDScript_c5y8f")
default_skin = ExtResource("11_cf01o")
cop_skin = ExtResource("10_u71h1")
robber_skin = ExtResource("13_1ijqw")
both_skin = ExtResource("8_ireie")
burnt_skin = ExtResource("9_dt0wh")
selected_skin = ExtResource("14_02gd7")
hovering_skin = ExtResource("12_pbbx2")

[node name="Level" type="Node2D"]
script = ExtResource("1_12eah")
agent_resource = ExtResource("2_885p4")

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("state_machine", "graph", "game_over_screen", "game_over_label")]
script = ExtResource("3_kock0")
state_machine = NodePath("StateMachine")
graph = NodePath("../Graph")
game_over_screen = NodePath("../CanvasLayer/GameOverScreen")
game_over_label = NodePath("../CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/Gameover")

[node name="StateMachine" parent="GameManager" node_paths=PackedStringArray("label") instance=ExtResource("4_oysjt")]
label = NodePath("../../CanvasLayer/MarginContainer/VBoxContainer/Label")

[node name="CheckForCopWin" parent="GameManager" instance=ExtResource("5_b0u6u")]

[node name="CaptureRobbers" type="Node" parent="GameManager"]
script = ExtResource("6_3nbrt")

[node name="Graph" parent="." instance=ExtResource("7_vxu8e")]
vertex_style_resource = SubResource("Resource_lslub")

[node name="Agents" type="Node2D" parent="."]

[node name="Cops" type="Node2D" parent="Agents"]

[node name="Robbers" type="Node2D" parent="Agents"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("15_jip8x")
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
alignment = 2

[node name="Retry" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Retry"
script = ExtResource("16_hgfn3")

[node name="Restart" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Restart"
script = ExtResource("17_0h2cj")

[node name="ForfeitButton" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Forfeit"

[node name="PauseButton" parent="CanvasLayer/MarginContainer/HBoxContainer" instance=ExtResource("18_b3gwf")]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GameOverScreen" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverScreen/CenterContainer"]
layout_mode = 2

[node name="Gameover" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="RetryButton" type="Button" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Retry"
script = ExtResource("17_0h2cj")

[node name="Retry" type="Button" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Retry"
script = ExtResource("16_hgfn3")

[node name="NextLevelButton" type="Button" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Next level"
script = ExtResource("19_dco50")

[node name="MainMenu" type="Button" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Go to main menu"
script = ExtResource("17_0h2cj")
scene_path = "res://Scenes/Levels/main_menu.tscn"

[node name="BeginScreen" type="PanelContainer" parent="CanvasLayer" node_paths=PackedStringArray("graph")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("20_fir45")
graph = NodePath("../../Graph")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/BeginScreen"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/BeginScreen/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/BeginScreen/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BeginScreen/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/BeginScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Graph Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AuthorLabel" type="Label" parent="CanvasLayer/BeginScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "by *name*"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="Control" parent="CanvasLayer/BeginScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="CanvasLayer/BeginScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "*description here"
autowrap_mode = 2

[node name="VSeparator2" type="Control" parent="CanvasLayer/BeginScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="BeginButton" type="Button" parent="CanvasLayer/BeginScreen"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[connection signal="cop_win" from="GameManager/CheckForCopWin" to="GameManager" method="cop_win"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/ForfeitButton" to="GameManager" method="forfeit"]
